examples/test/testpolicy9513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9513
  namespace: namespace185
spec:
  podSelector:
    matchLabels:
      key47: value41
      key48: value49
      key0: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value47
          key7: value16
          key31: value7
      podSelector:
        matchLabels:
          key27: value11
          key42: value33
          key26: value4
